<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="600dp"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtInputLayoutSearchDialogBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:hint="@string/model__"
        android:inputType="textImeMultiLine"
        android:padding="14dp"
        android:textColor="#666666"
        android:textColorHint="#666666"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:hintTextColor="#666666"
        app:startIconTint="#666666" />

    <TextView
        android:id="@+id/ModelDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:padding="10dp"
        android:text="@string/model____"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCustomDialog"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/CancelDialog"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ResetDialog"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset_"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/DoneDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#86B920"
                android:backgroundTint="#86B920"
                android:text="@string/done_"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
